--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 		              </div>
 		            </div>
 		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="https://trackmiyens.com" target="blank">Go to site</a>
+		                <a class="btn btn-launch" href="https://trackmiyens.com" target="blank">Go to app</a>
 		            </div>
 		          </div>
 		      </div>
