--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		      <div class="text-center">
 		        <img src="img/25552047_136150920504233_8840929622962669965_n_2.jpg" width=200 class="profile-pic">
 		        <h1>Axl Ivan</h1>
-		        <h3>Software Engineer</h3>
+		        <h3>Software Developer</h3>
 		        <h5></h5>
 		      </div>
 
