--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 		                <img src="img/track-task.png" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="https://trackmiyens.com" target="blank">Track:Task</a></h2>
+		                <h2><a href="https://trackmiyens.com" target="blank">Track: Task 2</a></h2>
 		                <p>A web application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
 		                <h4>Technology</h4>
 		                <p>Track is built on Laravel framework, with Vue as frontend, with node web socket that acts for pushing real-time data.</p>
@@ -148,7 +148,6 @@
 
 		    <script src="js/jquery-3.1.0.min.js"></script>
 		    <script src="js/bootstrap.min.js"></script>
-		    <!-- <script src="js/myScripts.js"></script> -->
 
 		  </body>
 		</html>
