--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		                <img src="img/track-task.png" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="https://trackmiyens.com" target="blank">Track: Task 2</a></h2>
+		                <h2><a href="https://trackmiyens.com" target="blank">Task</a></h2>
 		                <p>A web application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
 		                <h4>Technology</h4>
 		                <p>Track is built on Laravel framework, with Vue as frontend, with node web socket that acts for pushing real-time data.</p>
@@ -49,15 +49,17 @@
 		            </div>
 		            <div class="row text-center">
 		              <div class="col-xs-12">
+<!--
 		                <img src="img/techlogos/laravel.png" class="techlogo" width="100">
 		                <img src="img/techlogos/bootstrap-logo.png" class="techlogo" width="100">
 		                <img src="img/techlogos/vue.png" class="techlogo" width="100">
 		                <img src="img/techlogos/node.png" class="techlogo" width="100">
 		                <img src="img/techlogos/heroku.png" class="techlogo" width="100">
+-->
 		              </div>
 		            </div>
 		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="https://trackmiyens.com" target="blank">Go to app</a>
+		                <a class="btn btn-launch" href="https://trackmiyens.com" target="blank">Go to site</a>
 		            </div>
 		          </div>
 		      </div>
@@ -79,10 +81,12 @@
 		            </div>
 		            <div class="row text-center">
 		              <div class="col-xs-12">
+<!--
 		                <img src="img/techlogos/reactnative.png" class="techlogo" width="100">
 		                <img src="img/techlogos/koa.png" class="techlogo" width="100">
 		                <img src="img/techlogos/node.png" class="techlogo" width="100">
 		                <img src="img/techlogos/heroku.png" class="techlogo" width="100">
+-->
 		              </div>
 		            </div>
 		            <div class="row text-center" style="margin:20px;">
@@ -108,7 +112,9 @@
 		            </div>
 		            <div class="row text-center">
 		              <div class="col-xs-12">
+<!--
 		                <img src="img/techlogos/angular.png" class="techlogo" width="100">
+-->
 		              </div>
 		            </div>
 		            <div class="row text-center" style="margin:20px;">
