--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		                <h2><a href="https://trackmiyens.com" target="blank">Task</a></h2>
 		                <p>A web application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
 		                <h4>Technology</h4>
-		                <p>Track is built on Laravel framework, with Vue as frontend, with node web socket that acts for pushing real-time data.</p>
+		                <p>Track is built on Laravel framework, using Vue as UI and web socket for pushing notifications.</p>
 		              </div>
 		            </div>
 		            <div class="row text-center">
@@ -76,7 +76,7 @@
 		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive</a></h2>
 		                <p>A mobile application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
 		                <h4>Technology</h4>
-		                <p>Print Alive mobile application is built using React Native, with node Koa service that runs on Heroku. Integrating with the Google Sheets API for serving real-time statistics.</p>
+		                <p>Print Alive mobile application is built using React Native and Koa. Integrated with Google Sheets API.</p>
 		              </div>
 		            </div>
 		            <div class="row text-center">
@@ -107,7 +107,7 @@
 		                <h2><a href="https://appsbuildertech.com/school-intel-pro/" target="blank">School Intel Pro</a></h2>
 		                <p>School Intel Pro is a system that will automate various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
 		                <h4>Technology</h4>
-		                <p>School Intel Pro is built using Angular, with PHP as backend for handling API requests.</p>
+		                <p>School Intel Pro is built on PHP, using Angular as UI.</p>
 		              </div>
 		            </div>
 		            <div class="row text-center">
