--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		                <h2><a href="https://trackmiyens.com" target="blank">Task</a></h2>
 		                <p>A web application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
 		                <h4>Technology</h4>
-		                <p>Track is built on Laravel framework, using Vue as UI and web socket for pushing notifications.</p>
+		                <p>Track is built on Laravel framework, using Vue as UI. Uses web socket.</p>
 		              </div>
 		            </div>
 		            <div class="row text-center">
