--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		      <div class="row row-footer text-center">
 		        <div class="col">
 		          <div style="margin:50px;">
-		            <h3 style="margin:50px 0 15px">I'm available for work, get in touch</h3>
+		            <h3 style="margin:50px 0 15px">aaxlivan@gmail.com</h3>
 
 		          </div>
 		        </div>
@@ -137,16 +137,7 @@
 
 
 		    </div>
-		<!--
-		    <div class="container-fluid">
 
-
-
-		    </div> -->
-
-		<!--    <div class="text-center">
-		        <p style="margin-top:20px"">*Also love building other things, like VBA macros, mobile applications, chat bots, and the odd motorbike...</p>
-		      </div> -->
 
 
 
