--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
 
 		      <div class="row row-grey">
-		          <div class="col-sm-8 col-sm-offset-2">
+		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
 		              <div class="">
 		                <img src="img/track-task.png" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="https://trackmiyens.com" target="blank">Task</a></h2>
+		                <h2><a href="https://trackmiyens.com" target="blank">Task UI</a></h2>
 		                <p>A web application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
 		                <h4>Technology</h4>
 		                <p>Track is built on Laravel framework, using Vue as UI. Uses web socket.</p>
@@ -66,7 +66,7 @@
 
 
 		      <div class="row row-white">
-		          <div class="col-sm-8 col-sm-offset-2">
+		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
 		              <div class="col-lg-8">
@@ -97,7 +97,7 @@
 
 
 		      <div class="row row-grey">
-		          <div class="col-sm-8 col-sm-offset-2">
+		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
 		              <div class="">
