--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		                <img src="img/print-alive.png" class="img-responsive center-block">
 		              </div>
 		              <div class="col-lg-4">
-		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive</a></h2>
+		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
 		                <p>A mobile application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
 		                <h4>Technology</h4>
 		                <p>Print Alive mobile application is built using React Native and Koa. Integrated with Google Sheets API.</p>
