--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		              </div>
 		              <div class="">
 		                <h2><a href="https://trackmiyens.com" target="blank">Task UI</a></h2>
-		                <p>A web application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
+		                <p>An application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
 		                <h4>Technology</h4>
 		                <p>Track is built on Laravel framework, using Vue as UI. Uses web socket.</p>
 		              </div>
@@ -74,7 +74,7 @@
 		              </div>
 		              <div class="col-lg-4">
 		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
-		                <p>A mobile application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
+		                <p>Application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
 		                <h4>Technology</h4>
 		                <p>Print Alive mobile application is built using React Native and Koa. Integrated with Google Sheets API.</p>
 		              </div>
@@ -105,7 +105,7 @@
 		              </div>
 		              <div class="">
 		                <h2><a href="https://appsbuildertech.com/school-intel-pro/" target="blank">School Intel Pro</a></h2>
-		                <p>School Intel Pro is a system that will automate various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
+		                <p>School Intel Pro is an application for automating various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
 		                <h4>Technology</h4>
 		                <p>School Intel Pro is built on PHP, using Angular as UI.</p>
 		              </div>
