--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		              </div>
 		              <div class="col-lg-4">
 		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
-		                <p>Application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
+		                <p>Mobile application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
 		                <h4>Technology</h4>
 		                <p>Print Alive mobile application is built using React Native and Koa. Integrated with Google Sheets API.</p>
 		              </div>
