--- a/index.html
+++ b/index.html
@@ -32,13 +32,52 @@
 		        <h5></h5>
 		      </div>
 
+                      <div class="row row-grey">
+		          <div class="col-sm-6 col-sm-offset-3">
+		            <div class="row work-item-row">
+		              <div class="">
+		                <img src="" class="img-responsive center-block">
+		              </div>
+		              <div class="">
+		                <h2><a href="" target="blank">WOFEX Mobile</a></h2>
+		                <p></p>
+		                <h4>Technology</h4>
+		                <p></p>
+		              </div>
+		            </div>
+		            <div class="row text-center" style="margin:20px;">
+		                <a class="btn btn-launch" href="" target="blank">Go to site</a>
+		            </div>
+		          </div>
+		      </div>
+
+                      <div class="row row-white">
+		          <div class="col-sm-6 col-sm-offset-3">
+		            <div class="row work-item-row">
+		              <div class="">
+		                <img src="" class="img-responsive center-block">
+		              </div>
+		              <div class="">
+		                <h2><a href="" target="blank">PEPTarsus Event</a></h2>
+		                <p></p>
+		                <h4>Technology</h4>
+		                <p></p>
+		              </div>
+		            </div>
+		            <div class="row text-center" style="margin:20px;">
+		                <a class="btn btn-launch" href="" target="blank">Go to site</a>
+		            </div>
+		          </div>
+		      </div>
+
+
 
 		      <div class="row row-grey">
 		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
 		              <div class="">
-		                <img src="img/track-task.png" class="img-responsive center-block">
+		                <img src="img/track-task" class="img-responsive center-block">
 		              </div>
 		              <div class="">
 		                <h2><a href="https://trackmiyens.com" target="blank">Task</a></h2>
