--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		                <img src="" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="" target="blank">WOFEX Mobile</a></h2>
+		                <h2><a href="" target="blank">PEPTarsus Enterprise Software</a></h2>
 		                <p></p>
 		                <h4>Technology</h4>
 		                <p></p>
@@ -58,7 +58,7 @@
 		                <img src="" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="" target="blank">PEPTarsus Event</a></h2>
+		                <h2><a href="" target="blank">WOFEX Mobile</a></h2>
 		                <p></p>
 		                <h4>Technology</h4>
 		                <p></p>
@@ -70,9 +70,37 @@
 		          </div>
 		      </div>
 
+                      <div class="row row-grey">
+		          <div class="col-sm-6 col-sm-offset-3">
 
+		            <div class="row work-item-row">
+		              <div class="col-lg-8">
+		                <img src="img/print-alive.png" class="img-responsive center-block">
+		              </div>
+		              <div class="col-lg-4">
+		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
+		                <p>Mobile application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
+		                <h4>Technology</h4>
+		                <p>Print Alive mobile is built using React Native. Integrated with Google Sheets API.</p>
+		              </div>
+		            </div>
+		            <div class="row text-center">
+		              <div class="col-xs-12">
+<!--
+		                <img src="img/techlogos/reactnative.png" class="techlogo" width="100">
+		                <img src="img/techlogos/koa.png" class="techlogo" width="100">
+		                <img src="img/techlogos/node.png" class="techlogo" width="100">
+		                <img src="img/techlogos/heroku.png" class="techlogo" width="100">
+-->
+		              </div>
+		            </div>
+		            <div class="row text-center" style="margin:20px;">
+		                <a class="btn btn-launch" href="https://www.miyens.com/services/print-alive/" target="blank">Go to site</a>
+		            </div>
+		          </div>
+		      </div>
 
-		      <div class="row row-grey">
+		      <div class="row row-white">
 		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
@@ -104,35 +132,7 @@
 		      </div>
 
 
-		      <div class="row row-white">
-		          <div class="col-sm-6 col-sm-offset-3">
-
-		            <div class="row work-item-row">
-		              <div class="col-lg-8">
-		                <img src="img/print-alive.png" class="img-responsive center-block">
-		              </div>
-		              <div class="col-lg-4">
-		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
-		                <p>Mobile application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
-		                <h4>Technology</h4>
-		                <p>Print Alive mobile is built using React Native. Integrated with Google Sheets API.</p>
-		              </div>
-		            </div>
-		            <div class="row text-center">
-		              <div class="col-xs-12">
-<!--
-		                <img src="img/techlogos/reactnative.png" class="techlogo" width="100">
-		                <img src="img/techlogos/koa.png" class="techlogo" width="100">
-		                <img src="img/techlogos/node.png" class="techlogo" width="100">
-		                <img src="img/techlogos/heroku.png" class="techlogo" width="100">
--->
-		              </div>
-		            </div>
-		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="https://www.miyens.com/services/print-alive/" target="blank">Go to site</a>
-		            </div>
-		          </div>
-		      </div>
+		
 
 
 		      <div class="row row-grey">
