--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 		                <p></p>
 		              </div>
 		            </div>
+<!--
 		            <div class="row text-center" style="margin:20px;">
 		                <a class="btn btn-launch" href="" target="blank">Go to site</a>
 		            </div>
+-->
 		          </div>
 		      </div>
 
@@ -65,7 +67,7 @@
 		              </div>
 		            </div>
 		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="" target="blank">Go to site</a>
+		                <a class="btn btn-launch" href="" target="blank">Go to app</a>
 		            </div>
 		          </div>
 		      </div>
@@ -125,9 +127,11 @@
 -->
 		              </div>
 		            </div>
+<!--
 		            <div class="row text-center" style="margin:20px;">
 		                <a class="btn btn-launch" href="https://trackmiyens.com" target="blank">Go to site</a>
 		            </div>
+-->
 		          </div>
 		      </div>
 
@@ -156,9 +160,11 @@
 -->
 		              </div>
 		            </div>
+<!--
 		            <div class="row text-center" style="margin:20px;">
 		                <a class="btn btn-launch" href="https://appsbuildertech.com/school-intel-pro/" target="blank">Go to site</a>
 		            </div>
+-->
 		          </div>
 		      </div>
 
