--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 		        <h3>Software Engineer</h3>
 		        <h5></h5>
 		      </div>
-
+<!--
+			
                       <div class="row row-grey">
 		          <div class="col-sm-6 col-sm-offset-3">
 		            <div class="row work-item-row">
@@ -45,11 +46,7 @@
 		                <p></p>
 		              </div>
 		            </div>
-<!--
-		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="" target="blank">Go to site</a>
-		            </div>
--->
+
 		          </div>
 		      </div>
 
@@ -67,11 +64,12 @@
 		              </div>
 		            </div>
 		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="" target="blank">Go to app</a>
+		                <a class="btn btn-launch" href="" target="blank">Download app</a>
 		            </div>
 		          </div>
 		      </div>
-
+			
+-->
                       <div class="row row-grey">
 		          <div class="col-sm-6 col-sm-offset-3">
 
@@ -86,16 +84,7 @@
 		                <p>Print Alive mobile is built using React Native. Integrated with Google Sheets API.</p>
 		              </div>
 		            </div>
-		            <div class="row text-center">
-		              <div class="col-xs-12">
-<!--
-		                <img src="img/techlogos/reactnative.png" class="techlogo" width="100">
-		                <img src="img/techlogos/koa.png" class="techlogo" width="100">
-		                <img src="img/techlogos/node.png" class="techlogo" width="100">
-		                <img src="img/techlogos/heroku.png" class="techlogo" width="100">
--->
-		              </div>
-		            </div>
+	
 		            <div class="row text-center" style="margin:20px;">
 		                <a class="btn btn-launch" href="https://www.miyens.com/services/print-alive/" target="blank">Go to site</a>
 		            </div>
@@ -116,17 +105,7 @@
 		                <p>Track is built on Laravel framework, using Vue as UI. Uses web socket.</p>
 		              </div>
 		            </div>
-		            <div class="row text-center">
-		              <div class="col-xs-12">
-<!--
-		                <img src="img/techlogos/laravel.png" class="techlogo" width="100">
-		                <img src="img/techlogos/bootstrap-logo.png" class="techlogo" width="100">
-		                <img src="img/techlogos/vue.png" class="techlogo" width="100">
-		                <img src="img/techlogos/node.png" class="techlogo" width="100">
-		                <img src="img/techlogos/heroku.png" class="techlogo" width="100">
--->
-		              </div>
-		            </div>
+	
 <!--
 		            <div class="row text-center" style="margin:20px;">
 		                <a class="btn btn-launch" href="https://trackmiyens.com" target="blank">Go to site</a>
@@ -153,18 +132,12 @@
 		                <p>School Intel Pro is built on PHP, using Angular as UI.</p>
 		              </div>
 		            </div>
-		            <div class="row text-center">
-		              <div class="col-xs-12">
-<!--
-		                <img src="img/techlogos/angular.png" class="techlogo" width="100">
--->
-		              </div>
-		            </div>
-<!--
+
+
 		            <div class="row text-center" style="margin:20px;">
 		                <a class="btn btn-launch" href="https://appsbuildertech.com/school-intel-pro/" target="blank">Go to site</a>
 		            </div>
--->
+
 		          </div>
 		      </div>
 
