--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
 		                <p>Print Alive mobile is built using React Native. Integrated with Google Sheets API.</p>
 		              </div>
 		            </div>
-	
+<!--
 		            <div class="row text-center" style="margin:20px;">
 		                <a class="btn btn-launch" href="https://www.miyens.com/services/print-alive/" target="blank">Go to site</a>
 		            </div>
+-->
 		          </div>
 		      </div>
 
@@ -97,7 +98,7 @@
 		                <img src="img/track-task" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="https://trackmiyens.com" target="blank">Task</a></h2>
+		                <h2><a href="https://trackmiyens.com" target="blank">(Task)</a></h2>
 		                <p>An application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
 		                <h4>Technology</h4>
 		                <p>Track is built on Laravel framework, using Vue as UI. Uses web socket.</p>
@@ -131,11 +132,11 @@
 		              </div>
 		            </div>
 
-
+<!--
 		            <div class="row text-center" style="margin:20px;">
 		                <a class="btn btn-launch" href="https://appsbuildertech.com/school-intel-pro/" target="blank">Go to site</a>
 		            </div>
-
+-->
 		          </div>
 		      </div>
 
