--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 		                <img src="img/track-task" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="https://trackmiyens.com" target="blank">(Task)</a></h2>
-		                <p>An application for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
+		                <h2><a href="https://trackmiyens.com" target="blank">/Task</a></h2>
+		                <p>A module for managing tasks. It keep track on your employees tasks and gives you real-time updates.</p>
 		                <h4>Technology</h4>
-		                <p>Track is built on Laravel framework, using Vue as UI. Uses web socket.</p>
+		                <p>Task is built on Laravel framework, using Vue as UI. Uses web socket.</p>
 		              </div>
 		            </div>
 	
