--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 		            <div class="row work-item-row">
 		              <div class="">
-		                <img src="img/school-intel-pro-laptop.png" class="img-responsive center-block">
+		                <img src="img/school-intel-pro-laptop" class="img-responsive center-block">
 		              </div>
 		              <div class="">
 		                <h2><a href="https://appsbuildertech.com/school-intel-pro/" target="blank">School Intel Pro</a></h2>
