--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		                <img src="img/school-intel-pro-laptop" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="https://appsbuildertech.com/school-intel-pro/" target="blank">School Intel Pro</a></h2>
+		                <h2><a href="https://appsbuildertech.com/school-intel-pro.png/" target="blank">School Intel Pro</a></h2>
 		                <p>School Intel Pro is an application for automating various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
 		                <h4>Technology</h4>
 		                <p>School Intel Pro is built on PHP, using Angular as UI.</p>
