--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		                <img src="" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="" target="blank">PEPTarsus Enterprise Software</a></h2>
+		                <h2><a href="" target="blank">PEPTarsus Infomation System</a></h2>
 		                <p></p>
 		                <h4>Technology</h4>
 		                <p></p>
