--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		                <img src="" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="" target="blank">PEPTarsus Infomation System</a></h2>
+		                <h2><a href="" target="blank">PEPTarsus Infomation Systems</a></h2>
 		                <p></p>
 		                <h4>Technology</h4>
 		                <p></p>
@@ -69,7 +69,7 @@
 -->
 		          </div>
 		      </div>
-		
+<!--	
                       <div class="row row-grey">
 		          <div class="col-sm-6 col-sm-offset-3">
 
@@ -91,7 +91,7 @@
 -->
 		          </div>
 		      </div>
-
+-->
 		      <div class="row row-white">
 		          <div class="col-sm-6 col-sm-offset-3">
 
@@ -103,7 +103,7 @@
 		                <h2><a href="https://appsbuildertech.com/school-intel-pro/" target="blank">School Intel Pro</a></h2>
 		                <p>School Intel Pro is an application for automating various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
 		                <h4>Technology</h4>
-		                <p>School Intel Pro is built on PHP, using Angular as UI.</p>
+		                <p>School Intel Pro is built on native PHP</p>
 		              </div>
 		            </div>
 
