--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                       <div class="row row-grey">
 		          <div class="col-sm-6 col-sm-offset-3">
 		            <div class="row work-item-row">
-		              <div class="">
+		              <div>
 		                <img src="" class="img-responsive center-block">
 		              </div>
-		              <div class="">
+		              <div>
 		                <h2><a href="" target="blank">PEPTarsus Infomation Systems</a></h2>
 		                <p></p>
 		                <h4>Technology</h4>
@@ -52,10 +52,10 @@
                       <div class="row row-white">
 		          <div class="col-sm-6 col-sm-offset-3">
 		            <div class="row work-item-row">
-		              <div class="">
+		              <div>
 		                <img src="" class="img-responsive center-block">
 		              </div>
-		              <div class="">
+		              <div>
 		                <h2><a href="" target="blank">WOFEX Mobile</a></h2>
 		                <p></p>
 		                <h4>Technology</h4>
@@ -94,14 +94,14 @@
 		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
-		              <div class="">
+		              <div>
 		                <img src="img/school-intel-pro-laptop.png" class="img-responsive center-block">
 		              </div>
-		              <div class="">
+		              <div>
 		                <h2><a href="https://appsbuildertech.com/school-intel-pro/" target="blank">School Intel Pro</a></h2>
 		                <p>School Intel Pro is an application for automating various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
 		                <h4>Technology</h4>
-		                <p>School Intel Pro is built on native PHP</p>
+		                <p>School Intel Pro is built on native PHP.</p>
 		              </div>
 		            </div>
 
@@ -117,7 +117,7 @@
 		      <div class="row row-footer text-center">
 		        <div class="col">
 		          <div style="margin:50px;">
-		            <h3 style="margin:50px 0 15px">aaxlivan@gmail.com</h3>
+		            <h3 style="margin:50px 0 15px">📞 0947 982 1029</h3>
 
 		          </div>
 		        </div>
