--- a/index.html
+++ b/index.html
@@ -62,15 +62,10 @@
 		                <p></p>
 		              </div>
 		            </div>
-<!--
-		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="" target="blank">Download app</a>
-		            </div>
--->
 		          </div>
 		      </div>
-<!--	
-                      <div class="row row-grey">
+	
+                      <div class="row row-white">
 		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
@@ -81,15 +76,30 @@
 		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
 		                <p>Mobile application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
 		                <h4>Technology</h4>
-		                <p>Print Alive mobile is built using React Native. Integrated with Google Sheets API.</p>
+		                <p>Print Alive mobile is built on React Native. Integrated with Google Sheets API.</p>
 		              </div>
-		            </div>
-		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="https://www.miyens.com/services/print-alive/" target="blank">Go to site</a>
 		            </div>
 		          </div>
 		      </div>
--->
+
+		      <div class="row row-white">
+		          <div class="col-sm-6 col-sm-offset-3">
+
+		            <div class="row work-item-row">
+		              <div class="">
+		                <img src="img/track-task" class="img-responsive center-block">
+		              </div>
+		              <div class="">
+		                <h2><a href="https://trackmiyens.com" target="blank">Track Task</a></h2>
+		                <p>An application for managing tasks. Keep track on your employees task.</p>
+		                <h4>Technology</h4>
+		                <p>Task is built on Laravel framework, using Vue as UI.</p>
+		              </div>
+		            </div>
+		          </div>
+		      </div>
+
+
 		      <div class="row row-white">
 		          <div class="col-sm-6 col-sm-offset-3">
 
@@ -104,12 +114,6 @@
 		                <p>School Intel Pro is built on native PHP.</p>
 		              </div>
 		            </div>
-
-<!--
-		            <div class="row text-center" style="margin:20px;">
-		                <a class="btn btn-launch" href="https://appsbuildertech.com/school-intel-pro/" target="blank">Go to site</a>
-		            </div>
--->
 		          </div>
 		      </div>
 
