--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 		            <div class="row work-item-row">
 		              <div class="col-lg-8">
-		                <img src="img/print-alive.png" class="img-responsive center-block">
+		                <img src="" class="img-responsive center-block">
 		              </div>
 		              <div class="col-lg-4">
 		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
@@ -82,18 +82,35 @@
 		          </div>
 		      </div>
 
+                      <div class="row row-white">
+		          <div class="col-sm-6 col-sm-offset-3">
+
+		            <div class="row work-item-row">
+		              <div class="">
+		                <img src="" class="img-responsive center-block">
+		              </div>
+		              <div class="">
+		                <h2><a href="https://trackmiyens.com" target="blank">Fabuya Shop Reward</a></h2>
+		                <p></p>
+		                <h4>Technology</h4>
+		                <p></p>
+		              </div>
+		            </div>
+		          </div>
+		      </div>
+
 		      <div class="row row-white">
 		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
 		              <div class="">
-		                <img src="img/track-task" class="img-responsive center-block">
+		                <img src="img/track-task.png" class="img-responsive center-block">
 		              </div>
 		              <div class="">
-		                <h2><a href="https://trackmiyens.com" target="blank">Track Task</a></h2>
+		                <h2><a href="https://trackmiyens.com" target="blank">Miyens Track Task</a></h2>
 		                <p>An application for managing tasks. Keep track on your employees task.</p>
 		                <h4>Technology</h4>
-		                <p>Task is built on Laravel framework, using Vue as UI.</p>
+		                <p>Track Task is built on Laravel framework, using Vue as UI.</p>
 		              </div>
 		            </div>
 		          </div>
