--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 		              </div>
 		              <div class="col-lg-4">
 		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
-		                <p>Mobile application for Android and iOS devices use for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
+		                <p>Mobile application for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
 		                <h4>Technology</h4>
-		                <p>Print Alive mobile is built on React Native. Integrated with Google Sheets API.</p>
+		                <p>Print Alive mobile is built on React Native.</p>
 		              </div>
 		            </div>
 		          </div>
@@ -110,7 +110,7 @@
 		                <h2><a href="https://trackmiyens.com" target="blank">Miyens Track Task</a></h2>
 		                <p>An application for managing tasks. Keep track on your employees task.</p>
 		                <h4>Technology</h4>
-		                <p>Track Task is built on Laravel framework, using Vue as UI.</p>
+		                <p>Track Task is built on Laravel framework.</p>
 		              </div>
 		            </div>
 		          </div>
