--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 		          <div class="col-sm-6 col-sm-offset-3">
 
 		            <div class="row work-item-row">
-		              <div class="col-lg-8">
+		              <div class="">
 		                <img src="" class="img-responsive center-block">
 		              </div>
-		              <div class="col-lg-4">
+		              <div class="">
 		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
 		                <p>Mobile application for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
 		                <h4>Technology</h4>
