--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 		          <div class="col-sm-6 col-sm-offset-3">
 		            <div class="row work-item-row">
 		              <div>
-		                <img src="" class="img-responsive center-block">
+		                <img src="img/peptarsus.png" class="img-responsive center-block">
 		              </div>
 		              <div>
 		                <h2><a href="" target="blank">PEPTarsus Infomation Systems</a></h2>
 		                <p></p>
 		                <h4>Technology</h4>
-		                <p></p>
+		                <p>PEPTarsus Information Systems is built on Spring Framework, Node and React.</p>
 		              </div>
 		            </div>
 
