--- a/index.html
+++ b/index.html
@@ -1,128 +1,79 @@
 <!DOCTYPE html>
-
-		<html>
-		  <head>
-		    <meta charset="utf-8">
-		    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-		    <title>Axl Ivan</title>
-
-		    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
-		    <link rel="stylesheet" type="text/css" href="css/animate.css">
-		    <link rel="stylesheet" type="text/css" href="css/style.css">
-
-		    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		    <!-- Leave those next 4 lines if you care about users using IE8 -->
-		    <!--[if lt IE 9]>
-		      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		    <![endif]-->
-
-		  </head>
-		  <body>
-
-		    <div class="container-fluid">
-
-		      <div class="text-center">
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Axl Ivan</title>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400">
+		<link rel="stylesheet" type="text/css" href="css/animate.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		      	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div class="container-fluid">
+			<div class="text-center">
 		        <img src="img/25552047_136150920504233_8840929622962669965_n_2.jpg" width=200 class="profile-pic">
 		        <h1>Axl Ivan</h1>
 		        <h3>Software Engineer</h3>
-		        <h5></h5>
-		      </div>
-			
-                      <div class="row row-grey">
-		          <div class="col-sm-6 col-sm-offset-3">
-		            <div class="row work-item-row">
-		              <div>
-		                <img src="img/peptarsus.png" class="img-responsive center-block">
-		              </div>
-		              <div>
-		                <h2><a href="" target="blank">PEPTarsus Infomation Systems</a></h2>
-		                <p></p>
-		                <h4>Technology</h4>
-		                <p>PEPTarsus Information Systems is built on Spring Framework, Node and React.</p>
-		              </div>
-		            </div>
-
-		          </div>
-		      </div>
-	
-                      <div class="row row-white">
-		          <div class="col-sm-6 col-sm-offset-3">
-
-		            <div class="row work-item-row">
-		              <div class="">
-		                <img src="" class="img-responsive center-block">
-		              </div>
-		              <div class="">
-		                <h2><a href="https://www.miyens.com/services/print-alive/" target="blank">Printalive Mobile</a></h2>
-		                <p>Mobile application for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
-		                <h4>Technology</h4>
-		                <p>Print Alive mobile is built on React Native.</p>
-		              </div>
-		            </div>
-		          </div>
-		      </div>
-
-		      <div class="row row-white">
-		          <div class="col-sm-6 col-sm-offset-3">
-
-		            <div class="row work-item-row">
-		              <div class="">
-		                <img src="img/track-task.png" class="img-responsive center-block">
-		              </div>
-		              <div class="">
-		                <h2><a href="https://trackmiyens.com" target="blank">Miyens Track Task</a></h2>
-		                <p>An application for managing tasks. Keep track on your employees task.</p>
-		                <h4>Technology</h4>
-		                <p>Track Task is built on Laravel framework.</p>
-		              </div>
-		            </div>
-		          </div>
-		      </div>
-
-
-		      <div class="row row-white">
-		          <div class="col-sm-6 col-sm-offset-3">
-
-		            <div class="row work-item-row">
-		              <div>
-		                <img src="img/school-intel-pro-laptop.png" class="img-responsive center-block">
-		              </div>
-		              <div>
-		                <h2><a href="https://appsbuildertech.com/school-intel-pro/" target="blank">School Intel Pro</a></h2>
-		                <p>School Intel Pro is an application for automating various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
-		                <h4>Technology</h4>
-		                <p>School Intel Pro is built on native PHP.</p>
-		              </div>
-		            </div>
-		          </div>
-		      </div>
-
-
-		      <div class="row row-footer text-center">
-		        <div class="col">
-		          <div style="margin:50px;">
-		            <h3 style="margin:50px 0 15px">📞 0947 982 1029</h3>
-
-		          </div>
-		        </div>
-		      </div>
-
-
-
-
 		    </div>
-
-
-
-
-		    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
-
-		    <script src="js/jquery-3.1.0.min.js"></script>
-		    <script src="js/bootstrap.min.js"></script>
-
-		  </body>
-		</html>
+			<div class="row row-grey">
+		        <div class="col-sm-6 col-sm-offset-3">
+		            <div class="row work-item-row">
+		              	<div>
+		                	<img src="img/peptarsus.png" class="img-responsive center-block">
+		              	</div>
+		              	<div>
+		                	<h2>PEPTarsus Infomation Systems</h2>
+		                	<h4>Technology</h4>
+		                	<p>PEPTarsus Information Systems is built on Spring Framework.</p>
+		              	</div>
+					</div>
+		        </div>
+			</div>
+			<div class="row row-white">
+				<div class="col-sm-6 col-sm-offset-3">
+					<div class="row work-item-row">
+						<div>
+		                	<img src="img/track-task.png" class="img-responsive center-block">
+		              	</div>
+		              	<div>
+		                	<h2>Miyens Track Task</h2>
+		            		<p>An application for managing tasks. Keep track on your employees task.</p>
+		        			<h4>Technology</h4>
+	            			<p>Track Task is built on Laravel Framework.</p>
+		              	</div>
+		        	</div>
+		  		</div>
+			</div>
+			<div class="row row-grey">
+				<div class="col-sm-6 col-sm-offset-3">
+					<div class="row work-item-row">
+		              	<div>
+		                	<img src="img/school-intel-pro-laptop.png" class="img-responsive center-block">
+		              	</div>
+		              	<div>
+		                	<h2>School Intel Pro</h2>
+		            		<p>An application for automating various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
+		        			<h4>Technology</h4>
+		                	<p>School Intel Pro is built on native PHP.</p>
+		            	</div>
+		    		</div>
+		      	</div>
+			</div>
+			<div class="row row-footer text-center">
+		        <div class="col">
+		      		<div style="margin:50px;">
+		            	<h3 style="margin:50px 0 15px">📞 0947 982 1029</h3>
+					</div>
+		        </div>
+			</div>
+		</div>
+		<script src="js/jquery-3.1.0.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+	</body>
+</html>
