--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 		        <div class="col-sm-6 col-sm-offset-3">
 		            <div class="row work-item-row">
 		              	<div>
-		                	<img src="img/peptarsus.png" class="img-responsive center-block">
+		                	<img src="img/.png" class="img-responsive center-block">
 		              	</div>
 		              	<div>
-		                	<h2>PEPTarsus Infomation Systems</h2>
+		                	<h2>VY Domingo 3D Ring Designer</h2>
 		                	<h4>Technology</h4>
-		                	<p>PEPTarsus Information Systems is built on Spring Framework.</p>
+		                	<p>Y Domingo 3D Ring Designe is built on React & PC Engine.</p>
 		              	</div>
 					</div>
 		        </div>
