--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		        <div class="col-sm-6 col-sm-offset-3">
 		            <div class="row work-item-row">
 		              	<div>
-		                	<img src="img/.png" class="img-responsive center-block">
+		                	<img src="img/vyd-ring-design.png" class="img-responsive center-block">
 		              	</div>
 		              	<div>
 		                	<h2>VY Domingo 3D Ring Designer</h2>
