--- a/index.html
+++ b/index.html
@@ -22,18 +22,46 @@
 		        <h3>Software Engineer</h3>
 		    </div>
 			<div class="row row-grey">
-		        <div class="col-sm-6 col-sm-offset-3">
-		            <div class="row work-item-row">
-		              	<div>
-		                	<img src="img/vyd-ring-design.png" class="img-responsive center-block">
-		              	</div>
-		              	<div>
-		                	<h2>VY Domingo 3D Ring Designer</h2>
-		                	<h4>Technology</h4>
-		                	<p>Y Domingo 3D Ring Designe is built on React & PC Engine.</p>
-		              	</div>
+				<div class="col-sm-6 col-sm-offset-3">
+				    <div class="row work-item-row">
+					<div>
+						<img src="img/vyd-ring-design.png" class="img-responsive center-block">
 					</div>
-		        </div>
+					<div>
+						<h2>VY Domingo 3D Ring Designer</h2>
+						<h4>Technology</h4>
+						<p>VY Domingo 3D Ring Designer is built on React & PC Engine.</p>
+					</div>
+						</div>
+				</div>
+			</div>
+			<div class="row row-white">
+				<div class="col-sm-6 col-sm-offset-3">
+					<div class="row work-item-row">
+						<div>
+		                	<img src="img/track-task.png" class="img-responsive center-block">
+		              	</div>
+		              	<div>
+		                	<h2>VYD Mould Control System</h2>
+		        			<h4>Technology</h4>
+	            			<p>VYD Mould Control System is built on Spring Framework & React.</p>
+		              	</div>
+		        	</div>
+		  		</div>
+			</div>
+			<div class="row row-grey">
+				<div class="col-sm-6 col-sm-offset-3">
+				    <div class="row work-item-row">
+					<div>
+						<img src="img/peptarsus.png" class="img-responsive center-block">
+					</div>
+					<div>
+						<h2>PEPTarsus Event Management System</h2>
+						<h4>Technology</h4>
+						<p>PEPTarsus Event Management System is built on Spring Framework & React.</p>
+					</div>
+						</div>
+				</div>
 			</div>
 			<div class="row row-white">
 				<div class="col-sm-6 col-sm-offset-3">
