--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="col-sm-6 col-sm-offset-3">
 					<div class="row work-item-row">
 						<div>
-		                	<img src="img/track-task.png" class="img-responsive center-block">
+		                	<img src="img/vyd-mould-control-system.png" class="img-responsive center-block">
 		              	</div>
 		              	<div>
 		                	<h2>VYD Mould Control System</h2>
@@ -81,17 +81,32 @@
 			<div class="row row-grey">
 				<div class="col-sm-6 col-sm-offset-3">
 					<div class="row work-item-row">
-		              	<div>
-		                	<img src="img/school-intel-pro-laptop.png" class="img-responsive center-block">
-		              	</div>
-		              	<div>
-		                	<h2>School Intel Pro</h2>
-		            		<p>An application for automating various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
-		        			<h4>Technology</h4>
-		                	<p>School Intel Pro is built on native PHP.</p>
-		            	</div>
-		    		</div>
-		      	</div>
+		              			<div>
+		                			<img src="img/print-alive.png" class="img-responsive center-block">
+		              			</div>
+		              			<div>
+		                			<h2>Printalive</h2>
+		            				<p>Application for scanning Print Alive Generated QR codes to reveal contents like video, photo gallery, signup forms, product description, and more.</p>
+		        				<h4>Technology</h4>
+		                			<p>Print Alive is built on React Native & Koa.</p>
+		            			</div>
+		    			</div>
+		      		</div>
+			</div>
+			<div class="row row-white">
+				<div class="col-sm-6 col-sm-offset-3">
+					<div class="row work-item-row">
+		              			<div>
+		                			<img src="img/school-intel-pro-laptop.png" class="img-responsive center-block">
+		              			</div>
+		              			<div>
+		                			<h2>School Intel Pro</h2>
+		            				<p>An application for automating various tasks of your school. Make school life easier for both teachers and students as they gain access to their daily tasks, curriculum, colleague communication, and so much more – even from the convenience of their homes and smartphones.</p>
+		        				<h4>Technology</h4>
+		                			<p>School Intel Pro is built on native PHP.</p>
+		            			</div>
+		    			</div>
+		      		</div>
 			</div>
 			<div class="row row-footer text-center">
 		        <div class="col">
