--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="container-fluid">
 			<div class="text-center">
-		        <img src="img/25552047_136150920504233_8840929622962669965_n_2.jpg" width=200 class="profile-pic">
+		        <img src="https://lh3.googleusercontent.com/fife/AAWUweWuZ0dRBp2LAV6eigncEaV8E61wfKr8TX0JW5T4PjEcsMn8B2G1B6qAQPluViK2u4hebnEWLVdoaTRDl46m8zFdXHk6rTcHF-O8ZVBYVeHXJ4zVI_bqu7w9iyFWK0fh-HfjqLkPDpHkRfOvnIwMpVBl5Flnj_arWe23pSDa4M47h9ZIo9e9OomZxhG0sNbWQfAgXz8iGoqwH3uqWRdZ5PG3ipqgMOMko1MvuOiTjqvzmp7tC-OZOJ0aaQ1DooT8jMioQi708CEZt-XHULTBXcjKiu-CbqegWsu3Y-TmeWqcbwnpCOCXhr-hvIBdz5OpJJUBV3H64ustdmDyuexoA2uHb1fiu9ImtwDpvzDrhXXxr2s0rPm1jfw8aBvqJUwaWMxxoJz33Tii8OAcZT4P6HJRMig8QjngLVKlSIJBOKHOMt9ow-fV_lHW3r7iZwPyXbB3jF7JFXp91VDfdlW7FFp0naOVegbO2628OUp4cLqcs_jdN9ANcE0x539-77R-5hq-23xSdOTU1aBB5-aP0iqSXCh3aEjCOv0gdRIaxA2_47iIaS_CaMIO0TjR35YoznRl2rWK_P3i9lIJUBQsil4So6zW-DFPffca2pAgzALsHZPArpodm6-l6msV3Q2cod3b5OE2zkFOZir3tHmQ1mu79n4U7h0oGnxXxR07SENRWdF9KT3qqzOOhvfFL0CrlYTn_P-r8C6IxcCYrGi52gahxzy27PIcTV3rxoI4AlrvBohfpbnoEee7opDn8yPwgCrv4A=w342-h638-no?authuser=0" width=200 class="profile-pic">
 		        <h1>Axl Ivan</h1>
 		        <h3>Software Engineer</h3>
 		    </div>
